tests/compile_errors/031-long-tuple.buzz
// Tuples can't have more than 4 elements
test "Long tuple" {
	.{ 1, 2, 3, 4, 5 };
}
